; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem_context.c_i915_gem_context_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem_context.c_i915_gem_context_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { %struct.drm_i915_file_private* }
%struct.drm_i915_file_private = type { i32 }

@context_idr_cleanup = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i915_gem_context_close(%struct.drm_device* %0, %struct.drm_file* %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca %struct.drm_i915_file_private*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store %struct.drm_file* %1, %struct.drm_file** %4, align 8
  %6 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %7 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %6, i32 0, i32 0
  %8 = load %struct.drm_i915_file_private*, %struct.drm_i915_file_private** %7, align 8
  store %struct.drm_i915_file_private* %8, %struct.drm_i915_file_private** %5, align 8
  %9 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %10 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %9, i32 0, i32 0
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load %struct.drm_i915_file_private*, %struct.drm_i915_file_private** %5, align 8
  %13 = getelementptr inbounds %struct.drm_i915_file_private, %struct.drm_i915_file_private* %12, i32 0, i32 0
  %14 = load i32, i32* @context_idr_cleanup, align 4
  %15 = call i32 @idr_for_each(i32* %13, i32 %14, i32* null)
  %16 = load %struct.drm_i915_file_private*, %struct.drm_i915_file_private** %5, align 8
  %17 = getelementptr inbounds %struct.drm_i915_file_private, %struct.drm_i915_file_private* %16, i32 0, i32 0
  %18 = call i32 @idr_destroy(i32* %17)
  %19 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %20 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @idr_for_each(i32*, i32, i32*) #1

declare dso_local i32 @idr_destroy(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
